# werk

./: Cargo.toml  Werkfile
werk-vscode/: esbuild.mjs  package.json  tsconfig.json
werk-vscode/src/: codelens.ts  config.ts  extension.ts  tasks.ts  werk.ts
werk-vscode/wasm-glue/: Cargo.toml
werk-vscode/wasm-glue/src/: lib.rs
