[package]
name = "wasm-glue"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false, features = ["std"] }
serde = "1.0"
serde-wasm-bindgen = "0.6"
werk-parser = { path = "../../werk-parser" }
werk-util = { path = "../../werk-util" }
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
